--- a/style.css
+++ b/style.css
@@ -1,27 +1,27 @@
-body{
+body {
     font-family: monospace;
     font-size: 120%;
     background-color: lightgray;
 }
 
-p{
+p {
     text-align: justify;
 }
 
-header{
+header {
     display: flex;
     align-items: center;
 }
 
-#logo{
+#logo {
     padding: 0px 10px;
-    width:50px;
+    width: 50px;
 }
 
-footer{
+footer {
     background-color: darkgray;
     box-sizing: border-box;
-    border-top: 2px solid blue ;
+    border-top: 2px solid blue;
     width: 100%;
     padding: 10px 25px 30px 25px;
     margin-top: 100%;
@@ -30,17 +30,47 @@ footer{
     margin-bottom: 0px;
 }
 
-section.info{
+section.info {
     display: flex;
     align-items: flex-start;
     justify-content: space-around;
 }
 
-section > div{
+section>div {
     width: 40vw;
     padding: 0px 5vw;
 }
 
-li{
+li {
     padding: 5px 0px;
+}
+
+form {
+    margin-top: 5%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 5%;
+    width: 250px;
+    border-style: ridge;
+    padding: 0px 25px 25px 25px;
+}
+
+form>p {
+    align-self: center;
+}
+
+div#botoes_form {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+form>input {
+    margin-bottom: 15px;
+    border-color: darkslategrey;
+}
+
+form>label {
+    margin-bottom: 5px;
+    color: midnightblue;
 }
