--- a/style.css
+++ b/style.css
@@ -45,32 +45,111 @@ li {
     padding: 5px 0px;
 }
 
-form {
-    margin-top: 5%;
+main {
+    margin: 5% 7.5%;
+    display: flex;
+    justify-content: space-between;
+}
+
+#formulario-operacao {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-right: 7.5%;
+    border-style: outset;
+    border-width: 5px;
+    width: 900px;
+}
+
+#formulario-operacao>p {
+    align-self: center;
+    font-size: 25px;
+}
+
+#formulario-cadastro {
     display: flex;
     flex-direction: column;
-    margin-left: 5%;
     width: 250px;
     border-style: ridge;
+    border-color: dimgrey;
     padding: 0px 25px 25px 25px;
+    background-color: rgb(185, 185, 185);
 }
 
-form>p {
+#formulario-cadastro>p {
     align-self: center;
+    font-size: 16px;
 }
 
-div#botoes_form {
+#botoes_form {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    margin-top: 10px;
 }
 
-form>input {
+#botoes_form_op {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
+
+#botoes_form_op>input{
+    margin: 0px 50px;
+    width: 150px;
+    height: 35px;
+}
+
+form>input, label>input {
     margin-bottom: 15px;
     border-color: darkslategrey;
+}
+
+label>input{
+    margin-left: 15px;
+}
+
+#formulario-operacao label{
+    align-self: center;
+}
+
+#formulario-operacao label input{
+    width: 150px;
+    height: 20px;
 }
 
 form>label {
     margin-bottom: 5px;
     color: midnightblue;
+}
+
+#botoes-operacao{
+    margin-bottom: 20px;
+}
+
+button.operacao {
+    transition: 0.5s;
+    background-color: teal;
+    color: rgb(24, 24, 24);
+    font-size: 17px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border-radius: 5px;
+    width: 200px;
+    height: 40px;
+    margin: 0px 25px 25px 25px;
+}
+
+button.ativo {
+    transition: 0.5s;
+    background-color: rgb(46, 173, 173);
+    color: rgb(24, 24, 24);
+    font-size: 17px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border-radius: 5px;
+    width: 200px;
+    height: 40px;
+    margin: 0px 25px 25px 25px;
+    transform: scale(0.9);
 }
